# ml-testboard

./: .gitignore
server/: .env  connections.py  main.py  pyproject.toml
server/controllers/: common.py  recom_adv.py  recom_am_adv.py  recom_content.py  recom_renewal.py  test.py
server/dummies/: recom_renewal.py
server/models/: __init__.py  common.py  recom_adv.py  recom_am_adv.py  recom_content.py  recom_renewal.py  test.py
server/queries/recom_content/: query_get_active_users.py  query_get_passive_users.py  query_result_of_interview_review.py  query_result_of_job_interview.py  query_result_of_job_news.py  query_result_of_job_talk.py  query_result_of_passletter.py
server/queries/recom_renewal/: query_get_users.py  query_monitor_model_by_bz.py  query_monitor_result_by_bz.py  query_result_by_gno.py  query_result_by_id.py
server/utils/: loggers.py
web/: .env.development  .env.production  menu-registry.ts  next.config.js  package-lock.json  package.json  tsconfig.json
web/common/: components.tsx
web/components/: InfoComponent.tsx  LoadingComponent.tsx
web/components/EtcModule/: ItemProfileModule.tsx  RenderItemModule.tsx
web/components/FormModule/: AdvancedSearchComponent.tsx  MultiParamForm.tsx  NoParamForm.tsx  SingleParamForm.tsx
web/layouts/: ContentLayout.tsx  FooterLayout.tsx  HeaderLayout.tsx  SidebarLayout.tsx  index.tsx
web/models/: TestModel.ts  index.ts
web/models/recom_adv/: user_profile.ts  (+2 more)
web/pages/: _app.tsx  index.tsx
web/reducers/: index.ts  menu.ts  render.ts  table.ts
web/types/: api.ts  content.ts  form.ts  table.ts
(+37 files in other folders)
