[tool.poetry]
name = "testboard-server"
version = "0.1.0"
description = "Backend server for testboard (Jobkorea ML)"
authors = ["chanlim <chanlim@jobkorea.co.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.74.1"
PyHive = "^0.6.4"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
requests = "^2.27.1"
#pandas = "^1.4.1"
#SQLAlchemy = "^1.4.31"
jsf = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
